--- a/DASHBORAD/style.css
+++ b/DASHBORAD/style.css
@@ -1,1 +1,22 @@
 
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+  }
+
+  .Big{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+
+  }
+
+  .menu{
+    width: 40%;
+    background-color: black;
+    color: white;
+    
+
+  }
+ 
