--- a/SoicalMedia/style.css
+++ b/SoicalMedia/style.css
@@ -11,6 +11,7 @@
 .Two{
   display: flex;
   flex-direction: row;
+  gap: 40px;
 }
 .Two-1{
   display: flex;
@@ -35,4 +36,13 @@
 .Two-3{
   display: flex;
   flex-direction: column;
+}
+.image22{
+  width: 100px;
+  height: 120px;
+}
+.Two-2-one{
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
 }
