--- a/SoicalMedia/style.css
+++ b/SoicalMedia/style.css
@@ -41,8 +41,20 @@
   width: 100px;
   height: 120px;
 }
+
+.Two-2{
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
 .Two-2-one{
   display: flex;
   flex-direction: row;
   gap: 12px;
+}
+
+
+.Two-2-Two{
+  display: flex;
+  flex-direction: column;
 }
